--- a/src/components/estaticos/footer/Footer.css
+++ b/src/components/estaticos/footer/Footer.css
@@ -1,10 +1,10 @@
 .box1{
-    background-color: #F18F01; 
+    background-color: #0c0646; 
     height: 100px
 }
 
 .box2{
-    background-color: #449DD1;
+    background-color: #082f46;
      height: 60px
 }
 
