--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -4,7 +4,7 @@
 }
 
 .titulo{
-    color: #F18F01 !important;
+    color: #082f46 !important;
     font-weight: bold !important;
 }
 
@@ -15,7 +15,7 @@
 
 .botao{
     border-color: white !important;
-    background-color: #C589E8 !important;
+    background-color: #082f46 !important;
     color: white !important
 }
 
