--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -1,5 +1,5 @@
 .fundoLogin {
-    background-image: url();
+    background-image: url("https://imgur.com/I59NC38");
     background-repeat: no-repeat;
     width: 100vh;
     background-size: cover;
@@ -15,4 +15,9 @@
 
 .textos1{
     font-weight: bold !important;
+    font-family: "Raleway";
+}
+
+.fundo{
+    background-color: #FDFBF7;
 }
