--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -1,5 +1,5 @@
 .barra{
-    background-color: #082f46;
+    background-color: #cbbaf5;
 
     display: flex;
     justify-content: space-between;
@@ -13,7 +13,7 @@
 
 .typo{
     cursor: pointer;
-    color: white;
+    color: rgb(15, 15, 15);
     cursor: pointer;
 }
 
