--- a/src/paginas/login/Login.css
+++ b/src/paginas/login/Login.css
@@ -1,5 +1,5 @@
 .fundoLogin {
-    background-image: url("https://imgur.com/I59NC38");
+    background-image: url("https://i.imgur.com/I59NC38.png");
     background-repeat: no-repeat;
     width: 100vh;
     background-size: cover;
@@ -19,5 +19,5 @@
 }
 
 .fundo{
-    background-color: #FDFBF7;
+    background-color: #dfd9e0;
 }
